--- a/src/main/resources/templates/update-user.html
+++ b/src/main/resources/templates/update-user.html
@@ -2,20 +2,18 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Add user</title>
+    <title>Update user</title>
 </head>
 <body>
 
-<h1>Hello, user!</h1>
-
-<form action="#" th:action="@{/users/add}" th:object="${user}" method="post">
+<form action="#" th:action="@{/users/update/{id}(id=${user.id})}" th:object="${user}" method="post">
     <label for="name">Name</label>
     <input type="text" th:field="*{name}" id="name" placeholder="Name">
     <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
     <label for="email">Email</label>
     <input type="text" th:field="*{email}" id="email" placeholder="Email">
     <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
-    <input type="submit" value="Add User">
+    <input type="submit" value="Update User">
 </form>
 
 </body>
